# scml-agents

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  log_out.txt  pyproject.toml  pyrightconfig.json  q_buyer.txt  q_seller.txt  requirements.txt  restore_git_repos.bat  restore_git_repos.sh  setup.py  test_scml2019.py
.github/workflows/: pypi.yml  test.yml  test_from_github.yml
a_sengupta/: agent1_mod.py
agent0x111/: agent.py
bargent/: anewagent.py  negotiation_strategy.py  production_strategy.py  trading_strategy.py
biu-th/: agent.py  controller.py  negotiation_manager.py
monty_hall/: __init__.py  b7562ffb68164bf0a144fa48132408c6-pulp.mps  contractstest.py  myagent.py  myindependentnegotiatonmanager.py  mynegotiationmanager.py  nvm_lib_test.py  report.txt  utils.py
monty_hall/nvm_lib/: __init__.py  data.py  data_generator.py  nvm_lib.py  qtty_feasible_domain_cp.py  qtty_feasible_domain_cp_generator.py
monty_hall/nvm_lib2/: ilpnvm.py  nvm_lib2.py
monty_hall/nvm_lib2/data/: dict_price_num_intermediate_products_3_101.json  dict_price_num_intermediate_products_3_102.json  dict_price_num_intermediate_products_3_107.json  dict_price_num_intermediate_products_3_108.json  dict_price_num_intermediate_products_3_112.json  dict_price_num_intermediate_products_3_114.json  (+475 more)
niceteamname/: gfm2.py
past_frauds/: MhiranoAgent.py  Negotiator.py  PrintingAgent.py  myagent2.py
scml2019/: __init__.py
scml2020/: __init__.py
scml2020/a_sengupta/: agent1_mod.py
scml2020/bargent/: __init__.py  anewagent.py
scml2020/biu_th/: agent.py  negotiation_manager.py
scml2020/monty_hall/: a49f557b1f6d45418b32bbb6c253a0af-pulp.mps  contractstest.py  myagent.py  myindependentnegotiatonmanager.py  utils.py
scml2020/past_frauds/: __init__.py  myagent2.py
scml2020/team_10/: buy_neg_prediction_model.pth  hyperparameters.py  patches.py  trade.py  utility.py
scml2020/team_15/: SteadyMgr.py  __init__.py
scml2020/team_17/: __init__.py
scml2020/team_18/: __init__.py
scml2020/team_19/: __init__.py  agent.py  graph_test.py  test.py  tutorial.py
scml2020/team_20/: __init__.py
scml2020/team_22/: __init__.py  myagent.py
scml2020/team_25/: mixed_neg.py  pred_trade.py  trade_strategy.py
scml2020/team_27/: agent.py
scml2020/team_29/: DrorNegotiator.py  OmerProductionAgent.py  dana_neg_algo.py  playground_tournement.py  playground_world_session.py
scml2020/team_32/: __init__.py
scml2020/team_may/: __init__.py
scml2020/threadfield/: __init__.py
scml_agents/: __init__.py  agents.py  registry.py
scml_agents/scml2019/: __init__.py  fj2.py  iffm.py  monopoly.py  psfm.py  rapt_fm.py  saha.py
scml_agents/scml2020/: __init__.py
scml_agents/scml2021/: __init__.py
scml_agents/scml2022/: __init__.py
scml_agents/scml2023/: __init__.py
scml_agents/scml2024/: __init__.py
scml_agents/scml2025/: __init__.py
scml_agents/scml2026/: __init__.py
team_10/: agent.py  draw.py  hyperparameters.py  neg_model.py  negotiation.py  negotiation_train.py  patches.py  production.py  run.py  sell_neg_prediction_model.pth  trade.py  trade_model.py  trade_train.py  utility.py  utility_model.py  utility_train.py
team_15/: SteadyMgr.py
team_17/: Pagent.py
team_18/: mercu_agent3.py
team_19/: agent.py  graph_test.py  memo.txt  memo2.txt  scratch.py  test.py  tutorial.py
team_19/components/: __init__.py  controller.py  negotiation.py  prediction.py  production.py  trading.py
team_19/sklearn/: load_stats.py  regr_trading_price.py  regression.py
team_20/: CrescentAgent.py
team_22/: myagent.py
team_25/: mixed_neg.py  nego_strategy.py  pred_trade.py  prod_strategy.py  team_agent.py  trade_strategy.py
team_27/: agent.py
team_29/: DrorNegotiator.py  MyDrorAgent.py  OmerProductionAgent.py  biu_dody.py  biu_dody1.py  biu_dody2.py  dana_neg_algo.py  dana_neg_algo2.py  learnParams.py  playground_agent.py  playground_tournement.py  playground_world_session.py  production_binary_classifier_mixed_data.pkl  run_dana.py
team_32/: beer_agent.py
team_may/: mmm.py
tests/: conftest.py  switches.py  test_scml2019.py  test_scml2020.py  test_scml2021.py  test_scml2022.py  test_scml2023.py  test_scml2024.py  test_scml2025.py  test_scml2026.py  test_scml_2026_oneshot.py  test_scml_2026_standard.py  test_scml_agents.py
(+2592 files in other folders)
