[project]
name = "scml-agents"
version = "0.4.15"
description = "Agents submitted to the SCML competition or contributed by the community"
readme = "README.rst"
license = "GPL-2.0-or-later"
authors = [
    { name = "Yasser Mohammad", email = "yasserfarouk@gmail.com" }
]
keywords = ["negotiation", "mas", "multi-agent", "simulation", "AI"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "click>=6.0",
    "scml>=0.7.7",
    "negmas>=0.15.2",
    "torch",
    "numpy",
    "pulp",
    "xgboost",
    "tensorflow",
    "python-constraint",
    "prettytable",
    "mip",
    "stable-baselines3",
    "tqdm",
    "tensorboard>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/yasserfarouk/scml-agents"
Repository = "https://github.com/yasserfarouk/scml-agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "scml_agents/**/*",
    "AUTHORS.rst",
    "CONTRIBUTING.rst",
    "HISTORY.rst",
    "LICENSE",
    "README.rst",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/.DS_Store",
]

[tool.hatch.build.targets.wheel]
packages = ["scml_agents"]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
