[project]
name = "scml-agents"
version = "0.4.15"
description = "Agents submitted to the SCML competition or contributed by the community"
readme = "README.rst"
license = "GPL-2.0-or-later"
authors = [
    { name = "Yasser Mohammad", email = "yasserfarouk@gmail.com" }
]
keywords = ["negotiation", "mas", "multi-agent", "simulation", "AI"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "click>=6.0",
    "scml>=0.7.7",
    "negmas>=0.15.2",
    "torch",
    "numpy",
    "pulp",
    "xgboost",
    "tensorflow",
    "python-constraint",
    "prettytable",
    "mip",
    "stable-baselines3",
    "tqdm",
    "tensorboard>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/yasserfarouk/scml-agents"
Repository = "https://github.com/yasserfarouk/scml-agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "scml_agents/**/*",
    "AUTHORS.rst",
    "CONTRIBUTING.rst",
    "HISTORY.rst",
    "LICENSE",
    "README.rst",
    "MANIFEST.in",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/.DS_Store",
]

[tool.hatch.build.targets.wheel]
packages = ["scml_agents"]
# Include all data files (json, pkl, csv, etc.) in the wheel
artifacts = [
    "scml_agents/**/*.json",
    "scml_agents/**/*.pkl",
    "scml_agents/**/*.csv",
    "scml_agents/**/*.pt",
    "scml_agents/**/*.pth",
    "scml_agents/**/*.npy",
    "scml_agents/**/*.npz",
    "scml_agents/**/*.txt",
    "scml_agents/**/*.yaml",
    "scml_agents/**/*.yml",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",  # Line too long - let formatter handle it
    "E402",  # Module level import not at top of file
    "E721",  # Type comparisons instead of isinstance()
    "E722",  # Bare except clauses
    "E741",  # Ambiguous variable names
    "F401",  # Unused imports (many are intentional re-exports)
    "F403",  # Star imports are OK in this codebase
    "F405",  # Names from star imports are OK
    "F811",  # Redefinition of unused name
    "F821",  # Undefined name (many are from star imports that ruff can't resolve)
]

[tool.ruff.lint.isort]
known-first-party = ["scml_agents"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
